# tesi-federated-semantic-segmentation

./: README.md  pyproject.toml  visualize.py
federated_semantic_segmentation/: __init__.py  client_app.py  server_app.py  task.py
federated_semantic_segmentation/utils/: args.py  data.py  mm_model.py
